# tinyxlib

./: .gitignore  CMakeLists.txt  Makefile  Makefile.old  README  config.mk
ICE/: CMakeLists.txt  Makefile.old
SM/: CMakeLists.txt  Makefile.old
Xau/: CMakeLists.txt
Xcursor/: CMakeLists.txt  xcursorint.h
Xdmcp/: CMakeLists.txt
Xext/: CMakeLists.txt
Xfixes/: CMakeLists.txt  Makefile.old  Xfixesint.h
Xfont/: CMakeLists.txt  Makefile.old
Xi/: CMakeLists.txt
Xinerama/: CMakeLists.txt
Xmu/: Atoms.c  CMakeLists.txt  CvtStdSel.c  Makefile.old  ShapeWidg.c  StrToBS.c  StrToJust.c  StrToOrnt.c  StrToShap.c
Xmuu/: CMakeLists.txt
Xpm/: CMakeLists.txt  XpmI.h  simx.c
Xrender/: CMakeLists.txt  Makefile.old  Xrenderint.h
Xss/: CMakeLists.txt  Makefile.old
Xt/: CMakeLists.txt  Makefile.old
Xtst/: CMakeLists.txt  Makefile.old
Xv/: CMakeLists.txt  Makefile.old
include/: Makefile
libICE/: Makefile  icetrans.c
libSM/: Makefile
libXau/: Makefile
libXaw/: Makefile
libXcursor/: Makefile  xcursorint.h
libXdmcp/: Makefile
libXext/: Makefile  Xge.c
libXfixes/: Makefile  xfixesproto.h  xfixeswire.h
libXi/: Makefile
tinyX11/: CMakeLists.txt  ClDisplay.c  Context.c  CrBFData.c  CrPFBData.c  DisName.c  ErrDes.c  FreeCmap.c  Geom.c  GetImage.c  ImUtil.c  KeyBind.c  Macros.c  OfCCC.c  OpenDis.c  ParseGeom.c  PolyReg.c  PropAlloc.c  PutImage.c  QBlack.c  QBlue.c  QGreen.c  QRed.c  QWhite.c  RdBitF.c  Region.c  SetCCC.c  VisUtil.c  WMGeom.c  WrBitF.c  XKBBind.c  Xrm.c  cmsCmap.c  imConv.c
tinyX11/util/: makekeys
tinyX11/util/.deps/: makekeys.Po
(+34 files in other folders)
